# magellan

./: AGENTS.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  help.txt
.github/workflows/: ci.yml  release.yml
examples/: branch-handoff-timeline.json  dependency-tree-service-modules.json  entity-relationship-billing-schema.json  followup-validation-question.json  layer-stack-request-pipeline.json  session-walkthrough.json  state-machine-order-lifecycle.json  table-permission-matrix.json
scripts/: generate-homebrew-formula.sh  smoke-test-installed-magellan.sh
src/: examples.rs  lib.rs  main.rs  model.rs  render.rs
tests/: always_render.rs  cli.rs  example_fixtures.rs  prompt_system.rs
