[package]
name = "magellan-cli"
version = "0.6.0"
edition = "2024"
description = "Deterministic presentation engine for AI-generated technical walkthroughs"
license = "MIT"
repository = "https://github.com/nclandrei/magellan"
homepage = "https://github.com/nclandrei/magellan"
readme = "README.md"
authors = ["Andrei Nicolae"]
keywords = ["ai", "agent", "cli", "walkthrough", "visualization"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "magellan"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
schemars = { version = "1.1.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"
